--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_d2bfb39c63448ad"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -28,6 +29,7 @@
     "@vitejs/plugin-react-swc": "^3.9.0",
     "@vitest/browser": "^3.2.0",
     "@vitest/coverage-v8": "^3.2.0",
+    "chromatic": "^12.0.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
